--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,47 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: 212 87% 95%;
-  --foreground: 212 5% 10%;
-  --card: 212 50% 90%;
-  --card-foreground: 212 5% 15%;
-  --popover: 212 87% 95%;
-  --popover-foreground: 212 95% 10%;
-  --primary: 212 56% 40%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 212 30% 70%;
-  --secondary-foreground: 0 0% 0%;
-  --muted: 174 30% 85%;
-  --muted-foreground: 212 5% 35%;
-  --accent: 174 30% 80%;
-  --accent-foreground: 212 5% 15%;
-  --destructive: 0 87% 30%;
-  --destructive-foreground: 212 5% 90%;
-  --border: 212 30% 50%;
-  --input: 212 30% 24%;
-  --ring: 212 56% 40%;
-  --radius: 0.5rem;
+@layer base {
+  :root {
+    --background: 212 87% 95%;
+    --foreground: 212 5% 10%;
+    --card: 212 50% 90%;
+    --card-foreground: 212 5% 15%;
+    --popover: 212 87% 95%;
+    --popover-foreground: 212 95% 10%;
+    --primary: 212 56% 40%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 212 30% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 174 30% 85%;
+    --muted-foreground: 212 5% 35%;
+    --accent: 174 30% 80%;
+    --accent-foreground: 212 5% 15%;
+    --destructive: 0 87% 30%;
+    --destructive-foreground: 212 5% 90%;
+    --border: 212 30% 50%;
+    --input: 212 30% 24%;
+    --ring: 212 56% 40%;
+    --radius: 0.5rem;
+  }
+  .dark {
+    --background: 212 50% 10%;
+    --foreground: 212 5% 90%;
+    --card: 212 50% 10%;
+    --card-foreground: 212 5% 90%;
+    --popover: 212 50% 5%;
+    --popover-foreground: 212 5% 90%;
+    --primary: 212 56% 40%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 212 30% 20%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 174 30% 24%;
+    --muted-foreground: 212 5% 60%;
+    --accent: 174 30% 24%;
+    --accent-foreground: 212 5% 90%;
+    --destructive: 0 87% 30%;
+    --destructive-foreground: 212 5% 90%;
+    --border: 212 30% 24%;
+    --input: 212 30% 24%;
+    --ring: 212 56% 40%;
+    --radius: 0.5rem;
+  }
 }
-.dark {
-  --background: 212 50% 10%;
-  --foreground: 212 5% 90%;
-  --card: 212 50% 10%;
-  --card-foreground: 212 5% 90%;
-  --popover: 212 50% 5%;
-  --popover-foreground: 212 5% 90%;
-  --primary: 212 56% 40%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 212 30% 20%;
-  --secondary-foreground: 0 0% 100%;
-  --muted: 174 30% 24%;
-  --muted-foreground: 212 5% 60%;
-  --accent: 174 30% 24%;
-  --accent-foreground: 212 5% 90%;
-  --destructive: 0 87% 30%;
-  --destructive-foreground: 212 5% 90%;
-  --border: 212 30% 24%;
-  --input: 212 30% 24%;
-  --ring: 212 56% 40%;
-  --radius: 0.5rem;
+
+.react-colorful {
+  min-width: 200px;
+  width: 100% !important;
 }
