--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,26 +4,26 @@
 
 @layer base {
   :root {
-    --background: 212 87% 95%;
+    --background: 212 20% 99%;
     --foreground: 212 5% 10%;
-    --card: 212 50% 90%;
+    --card: 212 20% 99%;
     --card-foreground: 212 5% 15%;
-    --popover: 212 87% 95%;
+    --popover: 212 20% 99%;
     --popover-foreground: 212 95% 10%;
     --primary: 212 56% 40%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 212 30% 70%;
+    --secondary: 212 20% 90%;
     --secondary-foreground: 0 0% 0%;
-    --muted: 174 30% 85%;
-    --muted-foreground: 212 5% 35%;
-    --accent: 174 30% 80%;
+    --muted: 176.66666666666669 20% 95%;
+    --muted-foreground: 212 5% 40%;
+    --accent: 176.66666666666669 20% 90%;
     --accent-foreground: 212 5% 15%;
-    --destructive: 0 87% 30%;
-    --destructive-foreground: 212 5% 90%;
-    --border: 212 30% 50%;
-    --input: 212 30% 24%;
+    --destructive: 0 50% 50%;
+    --destructive-foreground: 212 5% 99%;
+    --border: 212 20% 82%;
+    --input: 212 20% 50%;
     --ring: 212 56% 40%;
-    --radius: 0.5rem;
+    --radius: 1rem;
   }
   .dark {
     --background: 212 50% 10%;
